
[TestSlackPresenter_Present - 1]
*v0.19.1*

*Bug Fixes*
• Redirect cursor hide/show to stderr [PR <https://github.com/anchore/syft/pull/456|#456>]

*Added Features*
• added feature [PR <https://github.com/anchore/syft/pull/457|#457> `@wagoodman`]
• another added feature

*Breaking Changes*
• breaking change [Issue <https://github.com/anchore/syft/issues/450|#450>] [PR <https://github.com/anchore/syft/pull/458|#458> `@wagoodman`]

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---

[TestSlackPresenter_Present_NoTitle - 1]
*Bug Fixes*
• Redirect cursor hide/show to stderr [PR <https://github.com/anchore/syft/pull/456|#456>]

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---

[TestSlackPresenter_Present_NoChanges - 1]
*Changelog*

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---

[TestSlackPresenter_Present_EscapesMrkdwn - 1]
*release &lt;v0.19.1&gt; &amp; friends*

*Bug Fixes*
• handle &lt;-chan close &amp; guard A &gt; B [PR <https://github.com/anchore/syft/pull/456|#456>]

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---

[TestSlackPresenter_Present_DependencyDiff - 1]
*v0.20.0*

*Bug Fixes*
• some bug fix

*Dependencies*

4 dependency changes (1 updated, 1 downgraded, 1 added, 1 removed). 3 vulnerabilities remediated and 1 vulnerability introduced.

• Updated (1 package)
    • golang.org/x/net `v0.17.0` → `v0.23.0` *(🟢 remediated CVE-2023-39325, <https://nvd.nist.gov/vuln/detail/CVE-2023-44487|CVE-2023-44487>)*
• Downgraded (1 package)
    • github.com/foo/bar `v1.2.0` → `v1.1.0` *(🔴 reintroduces <https://nvd.nist.gov/vuln/detail/CVE-2024-12345|CVE-2024-12345>)*
• Added (1 package)
    • github.com/new/dep `v0.4.0`
• Removed (1 package)
    • github.com/old/dep `v0.9.0` *(🟢 remediated <https://nvd.nist.gov/vuln/detail/CVE-2022-0001|CVE-2022-0001>)*

*<https://github.com/anchore/syft/compare/v0.19.0...v0.20.0|Full Changelog>*

---

[TestSlackPresenter_Present_DependencyDiff_ShowRemaining - 1]
*v0.20.0*

*Dependencies*

1 dependency change (1 updated).

*🟡 Remaining (2)*
• <https://nvd.nist.gov/vuln/detail/CVE-2021-1111|CVE-2021-1111> (critical) — github.com/legacy/lib
• CVE-2021-2222 (medium) — github.com/legacy/lib

• Updated (1 package)
    • golang.org/x/net `v0.17.0` → `v0.23.0`

*<https://example.com/compare|Full Changelog>*

---

[TestSlackPresenter_Present_Toolchain - 1]
*Changelog*

*Bug Fixes*
• Redirect cursor hide/show to stderr [PR <https://github.com/anchore/syft/pull/456|#456>]

*Dependencies*

*Toolchains (1)*
• Go minimum version: 1.21 → 1.23

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---

[TestSlackPresenter_Present_ToolchainDowngrade - 1]
*Changelog*

*Dependencies*

*Toolchains (1)*
• Go minimum version: 1.23 → 1.21 (downgrade)

*<https://github.com/anchore/syft/compare/v0.19.0...v0.19.1|Full Changelog>*

---
